# Scizer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/sizer-cli/: Cargo.toml
crates/sizer-cli/src/: bench.rs  main.rs  progress.rs
crates/sizer-cloud/: .env.example  Cargo.toml  README.md
crates/sizer-cloud/migrations/: 0001_init.sql
crates/sizer-cloud/src/: app.rs  auth.rs  config.rs  db.rs  error.rs  jobs.rs  lib.rs  progress.rs  queue.rs  storage.rs
crates/sizer-cloud/src/routes/: health.rs  jobs.rs
crates/sizer-codecs-archive/: Cargo.toml
crates/sizer-codecs-archive/examples/: throughput.rs
crates/sizer-codecs-archive/src/: gzip.rs  lib.rs  zstd.rs
crates/sizer-codecs-convert/: Cargo.toml
crates/sizer-codecs-convert/src/: image_convert.rs  images_to_pdf.rs  lib.rs  pdf_merge.rs
crates/sizer-codecs-document/: Cargo.toml
crates/sizer-codecs-document/src/: lib.rs  pdf.rs
crates/sizer-codecs-image/: Cargo.toml
crates/sizer-codecs-image/src/: fidelity.rs  jpeg.rs  lib.rs  png.rs
crates/sizer-codecs-video/: Cargo.toml
crates/sizer-codecs-video/src/: ffmpeg.rs  lib.rs  probe.rs
crates/sizer-core/: Cargo.toml
crates/sizer-core/src/: codec.rs  detect.rs  error.rs  guard.rs  integrity.rs  lib.rs  progress.rs
crates/sizer-desktop/: Cargo.toml  tauri.conf.json
crates/sizer-desktop/capabilities/: default.json
crates/sizer-desktop/src/: commands.rs  main.rs  progress.rs
crates/sizer-desktop/ui/: app.js  index.html  style.css
crates/sizer-registry/: Cargo.toml
crates/sizer-registry/src/: lib.rs
crates/sizer-wasm/: Cargo.toml
crates/sizer-wasm/src/: lib.rs  progress.rs
crates/sizer-wasm/web/: app.js  index.html  style.css  worker.js
docs/: ARCHITECTURE.md
