[package]
name = "sizer-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sizer-cloud-api"
path = "src/bin/api.rs"

[[bin]]
name = "sizer-cloud-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "sizer-cloud-keygen"
path = "src/bin/keygen.rs"

[dependencies]
sizer-core = { path = "../sizer-core" }
sizer-registry = { path = "../sizer-registry" }

thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "signal", "time"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
aws-config = "1"
aws-sdk-s3 = "1"

dotenvy = "0.15"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
