[package]
name = "sizer-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop shell. Thin: every command here is a direct call into sizer-core/sizer-codecs-* -- no business logic lives in this crate or in the frontend."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sizer-core = { path = "../sizer-core" }
sizer-codecs-image = { path = "../sizer-codecs-image" }
sizer-codecs-convert = { path = "../sizer-codecs-convert" }
sizer-registry = { path = "../sizer-registry" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { workspace = true, features = ["fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true

[[bin]]
name = "sizer-desktop"
path = "src/main.rs"
